// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputHaloPresenter renders by default 1`] = `
.emotion-1 {
  position: relative;
  border-bottom-style: solid;
  border-bottom-color: rgba(128,128,128,0.5);
  border-bottom-width: 1px;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders when disabled 1`] = `
.emotion-1 {
  position: relative;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  color: rgba(60,60,60,0.2);
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders with focus 1`] = `
.emotion-1 {
  position: relative;
  border-bottom-style: solid;
  border-bottom-color: #0696d7;
  border-bottom-width: 1px;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  height: 1px;
  background-color: rgba(6,150,215,0.25);
  -webkit-transition-duration: 0.1s,0.1s;
  transition-duration: 0.1s,0.1s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders with hover 1`] = `
.emotion-1 {
  position: relative;
  border-bottom-style: solid;
  border-bottom-color: #0ED3BE;
  border-bottom-width: 1px;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  height: 1px;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.1s,0.1s;
  transition-duration: 0.1s,0.1s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;
